Fix scrollbars being everywhere on the event details page

--- a/opsy/plugins/monitoring/static/css/opsy_monitoring/client_event_details.css
+++ b/opsy/plugins/monitoring/static/css/opsy_monitoring/client_event_details.css
@@ -13,7 +13,6 @@ tr > td:first-child {
 }
 
 table td {
-    overflow: scroll;
     word-wrap: break-word;
     white-space: pre-wrap;
 }
